--- a/contacts.html
+++ b/contacts.html
@@ -1,14 +1,14 @@
-<<!doctype html>
+<!doctype html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Флагиан Консалтинг</title>
+    <title>Обратная связь с Флагиан Консалтинг</title>
     <!--            <link rel="icon" type="image/svg+xml" sizes="any" href="images/favicon.svg">-->
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon.png">
-    <link rel="icon" type="image/svg" sizes="any" href="images/favicon.svg">
+    <!--    <link rel="icon" type="image/svg" sizes="any" href="images/favicon.svg">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/style.css">
@@ -25,7 +25,7 @@
     <!-- шапка -->
     <header>
         <!--     OFFcanvas  навигация -->
-        <nav class="navbar navbar-dark nav_flag">
+        <nav class="navbar navbar-dark nav_flag fixed-top">
             <!--            <nav class="navbar navbar-dark bg-dark fixed-top">-->
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="images/logo_2.png"
@@ -34,80 +34,86 @@
                         data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                <div class="offcanvas offcanvas-end  offcanvasDarkNavbar2" data-bs-scroll="true" tabindex="-1"
+                     id="offcanvasDarkNavbar"
                      aria-labelledby="offcanvasDarkNavbarLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Флагман Консалтинг</h5>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                     </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <div class="offcanvas-body ">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Консалтинг</a>
+                                <a class="nav-link " href="index.html">Главная</a>
+                                <a class="nav-link"  href="about.html">Команда экспертов</a>
+                                <a class="nav-link active" aria-current="page" href="contacts.html">Контакты. Обратная связь</a>
                             </li>
+                            <!--                            <li class="nav-item">-->
+                            <!--                                <a class="nav-link active" aria-current="page" href="index.html">Консалтинг</a>-->
+                            <!--                            </li>-->
 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                   aria-expanded="false">
-                                    Оценка персонала
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Какие задачи решаем</a></li>
-                                    <li><a class="dropdown-item" href="#">Оценочные инструменты</a></li>
-                                    <li><a class="dropdown-item" href="#">Целевые аудитории для оценки</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Наши Преимущества</a></li>
-                                </ul>
+                            <!--                            <li class="nav-item dropdown">-->
+                            <!--                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"-->
+                            <!--                                   aria-expanded="false">-->
+                            <!--                                    Оценка персонала-->
+                            <!--                                </a>-->
+                            <!--                                <ul class="dropdown-menu dropdown-menu-dark">-->
+                            <!--                                    <li><a class="dropdown-item" disabled>Какие задачи решаем</a></li>-->
+                            <!--                                    <li><a class="dropdown-item" disabled>Оценочные инструменты</a></li>-->
+                            <!--                                    <li><a class="dropdown-item" disabled>Целевые аудитории для оценки</a></li>-->
+                            <!--                                    <li>-->
+                            <!--                                        <hr class="dropdown-divider">-->
+                            <!--                                    </li>-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Наши Преимущества</a></li>-->
+                            <!--                                </ul>-->
 
-                            </li>
+                            <!--                            </li>-->
 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                   aria-expanded="false">
-                                    Тренинги
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Для Менеджеров по работе <br> с ключевыми
-                                        клиентами (KAM)</a></li>
-                                    <li><a class="dropdown-item" href="#">Для аптечных <br>и медицинских
-                                        представителей<br>Полевые силы</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Для Лидеров коммерческих команд <br>
-                                        Менеджеров
-                                        back-office</a></li>
-                                </ul>
+                            <!--                            <li class="nav-item dropdown">-->
+                            <!--                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"-->
+                            <!--                                   aria-expanded="false">-->
+                            <!--                                    Тренинги-->
+                            <!--                                </a>-->
+                            <!--                                <ul class="dropdown-menu dropdown-menu-dark">-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Для Менеджеров по работе <br> с ключевыми-->
+                            <!--                                        клиентами (KAM)</a></li>-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Для аптечных <br>и медицинских-->
+                            <!--                                        представителей<br>Полевые силы</a></li>-->
+                            <!--                                    <li>-->
+                            <!--                                        <hr class="dropdown-divider">-->
+                            <!--                                    </li>-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Для Лидеров коммерческих команд <br>-->
+                            <!--                                        Менеджеров-->
+                            <!--                                        back-office</a></li>-->
+                            <!--                                </ul>-->
 
-                            </li>
+                            <!--                            </li>-->
 
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                   aria-expanded="false">
-                                    ЭКСПЕРТЫ
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Лидеры команды</a></li>
-                                    <li><a class="dropdown-item" href="#">Почему выбирают нас</a></li>
-                                    <!--                                    <li>-->
-                                    <!--                                        <hr class="dropdown-divider">-->
-                                    <!--                                    </li>-->
-                                    <!--                                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>-->
-                                </ul>
+                            <!--                            <li class="nav-item dropdown">-->
+                            <!--                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"-->
+                            <!--                                   aria-expanded="false">-->
+                            <!--                                    ЭКСПЕРТЫ-->
+                            <!--                                </a>-->
+                            <!--                                <ul class="dropdown-menu dropdown-menu-dark">-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Лидеры команды</a></li>-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Почему выбирают нас</a></li>-->
+                            <!--                                    &lt;!&ndash;                                    <li>&ndash;&gt;-->
+                            <!--                                    &lt;!&ndash;                                        <hr class="dropdown-divider">&ndash;&gt;-->
+                            <!--                                    &lt;!&ndash;                                    </li>&ndash;&gt;-->
+                            <!--                                    &lt;!&ndash;                                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>&ndash;&gt;-->
+                            <!--                                </ul>-->
 
-                            </li>
+                            <!--                            </li>-->
 
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Этапы реализации проектов</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Реализованные проекты <br>Отзывы участников</a>
-                                <a class="nav-link" href="#">О нас</a>
-                                <a class="nav-link" href="#">Контакты. Обратная связь</a>
-                            </li>
+                            <!--                            <li class="nav-item">-->
+                            <!--                                <a class="nav-link" href="#">Этапы реализации проектов</a>-->
+                            <!--                            </li>-->
+<!--                            <li class="nav-item">-->
+<!--                                &lt;!&ndash;                                <a class="nav-link" href="#">Реализованные проекты <br>Отзывы участников</a>&ndash;&gt;-->
+<!--                                <a class="nav-link" href="about.html">Команда экспертов</a>-->
+<!--                                <a class="nav-link" href="contacts.html">Контакты. Обратная связь</a>-->
+<!--                            </li>-->
                         </ul>
                         <!--                        <form class="d-flex mt-3" role="search">-->
                         <!--                            <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">-->
@@ -122,22 +128,57 @@
     </header>
     <!-- end of шапка -->
     <!--хлебные крошки-->
-        <<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Контакты</li>
-  </ol>
-</nav>
+    <!--    <nav class="crumb" aria-label="breadcrumb">-->
+    <!--        <ol class="breadcrumb ">-->
+    <!--            <li class="breadcrumb-item active " aria-current="page" style="color: #78E100 ">Главная</li>-->
+    <!--        </ol>-->
+    <!--    </nav>-->
+    <br><br><br>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
+            <li class="breadcrumb-item"><a href="about.html">Команда экспертов</a></li>
+            <li class="breadcrumb-item active" aria-current="page" style="color: #78E100">Контакты</li>
+            <!--            <li class="breadcrumb-item active" aria-current="page">О нас</li>-->
+        </ol>
+    </nav>
     <!--хлебные крошки-->
 
-    <!--контент-->
+    <!--Свяжитесь с нами-->
+
+    <br>
+    <h1>Свяжитесь с нами:</h1>
+    <br>
+    <div class="row">
+        <div class="col-10 col-centered bg-light p-3 rounded">
+            <form>
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Адрес электронной почты</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">Мы никогда никому не передадим вашу электронную почту.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputName" class="form-label">Ваше имя</label>
+                    <input type="text" class="form-control" id="exampleInputName">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPhone" class="form-label">Телефон</label>
+                    <input type="tel" class="form-control" id="exampleInputPhone">
+                </div>
+
+                <button type="submit" class="btn btn-primary">Отправить</button>
+            </form>
+        </div>
+
+    <!--контент end-->
+
 
 </div>
 <!--подвал-->
 <br>
-<footer class="bg-body-tertiary text-center text-lg-start">
+<footer class="nav_flag text-center text-lg-start">
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(255, 255, 255, 0.05);">
+    <div class="text-center p-3" style="color: #F8FAA7">
         © 2024 Флагиан Консалтинг
     </div>
     <!-- Copyright -->
