--- a/index.html
+++ b/index.html
@@ -45,70 +45,72 @@
                     <div class="offcanvas-body ">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Консалтинг</a>
-                            </li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                   aria-expanded="false">
-                                    Оценка персонала
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" disabled>Какие задачи решаем</a></li>
-                                    <li><a class="dropdown-item" disabled>Оценочные инструменты</a></li>
-                                    <li><a class="dropdown-item" disabled>Целевые аудитории для оценки</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Наши Преимущества</a></li>
-                                </ul>
-
-                            </li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                   aria-expanded="false">
-                                    Тренинги
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Для Менеджеров по работе <br> с ключевыми
-                                        клиентами (KAM)</a></li>
-                                    <li><a class="dropdown-item" href="#">Для аптечных <br>и медицинских
-                                        представителей<br>Полевые силы</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Для Лидеров коммерческих команд <br>
-                                        Менеджеров
-                                        back-office</a></li>
-                                </ul>
-
-                            </li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                   aria-expanded="false">
-                                    ЭКСПЕРТЫ
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Лидеры команды</a></li>
-                                    <li><a class="dropdown-item" href="#">Почему выбирают нас</a></li>
-                                    <!--                                    <li>-->
-                                    <!--                                        <hr class="dropdown-divider">-->
-                                    <!--                                    </li>-->
-                                    <!--                                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>-->
-                                </ul>
-
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Этапы реализации проектов</a>
-                            </li>
-                            <li class="nav-item">
-<!--                                <a class="nav-link" href="#">Реализованные проекты <br>Отзывы участников</a>-->
-                                <a class="nav-link" href="about.html">О нас</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">Главная</a>
+                                <a class="nav-link" href="about.html">Команда экспертов</a>
                                 <a class="nav-link" href="contacts.html">Контакты. Обратная связь</a>
                             </li>
+
+<!--                            <li class="nav-item dropdown">-->
+<!--                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"-->
+<!--                                   aria-expanded="false">-->
+<!--                                    Оценка персонала-->
+<!--                                </a>-->
+<!--                                <ul class="dropdown-menu dropdown-menu-dark">-->
+<!--                                    <li><a class="dropdown-item" disabled>Какие задачи решаем</a></li>-->
+<!--                                    <li><a class="dropdown-item" disabled>Оценочные инструменты</a></li>-->
+<!--                                    <li><a class="dropdown-item" disabled>Целевые аудитории для оценки</a></li>-->
+<!--                                    <li>-->
+<!--                                        <hr class="dropdown-divider">-->
+<!--                                    </li>-->
+<!--                                    <li><a class="dropdown-item" href="#">Наши Преимущества</a></li>-->
+<!--                                </ul>-->
+
+<!--                            </li>-->
+
+<!--                            <li class="nav-item dropdown">-->
+<!--                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"-->
+<!--                                   aria-expanded="false">-->
+<!--                                    Тренинги-->
+<!--                                </a>-->
+<!--                                <ul class="dropdown-menu dropdown-menu-dark">-->
+<!--                                    <li><a class="dropdown-item" href="#">Для Менеджеров по работе <br> с ключевыми-->
+<!--                                        клиентами (KAM)</a></li>-->
+<!--                                    <li><a class="dropdown-item" href="#">Для аптечных <br>и медицинских-->
+<!--                                        представителей<br>Полевые силы</a></li>-->
+<!--                                    <li>-->
+<!--                                        <hr class="dropdown-divider">-->
+<!--                                    </li>-->
+<!--                                    <li><a class="dropdown-item" href="#">Для Лидеров коммерческих команд <br>-->
+<!--                                        Менеджеров-->
+<!--                                        back-office</a></li>-->
+<!--                                </ul>-->
+
+<!--                            </li>-->
+
+<!--                            <li class="nav-item dropdown">-->
+<!--                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"-->
+<!--                                   aria-expanded="false">-->
+<!--                                    ЭКСПЕРТЫ-->
+<!--                                </a>-->
+<!--                                <ul class="dropdown-menu dropdown-menu-dark">-->
+<!--                                    <li><a class="dropdown-item" href="#">Лидеры команды</a></li>-->
+<!--                                    <li><a class="dropdown-item" href="#">Почему выбирают нас</a></li>-->
+<!--                                    &lt;!&ndash;                                    <li>&ndash;&gt;-->
+<!--                                    &lt;!&ndash;                                        <hr class="dropdown-divider">&ndash;&gt;-->
+<!--                                    &lt;!&ndash;                                    </li>&ndash;&gt;-->
+<!--                                    &lt;!&ndash;                                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>&ndash;&gt;-->
+<!--                                </ul>-->
+
+<!--                            </li>-->
+
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" href="#">Этапы реализации проектов</a>-->
+<!--                            </li>-->
+<!--                            <li class="nav-item">-->
+<!--&lt;!&ndash;                                <a class="nav-link" href="#">Реализованные проекты <br>Отзывы участников</a>&ndash;&gt;-->
+<!--                                <a class="nav-link" href="about.html">Команда экспертов</a>-->
+<!--                                <a class="nav-link" href="contacts.html">Контакты. Обратная связь</a>-->
+<!--                            </li>-->
                         </ul>
                         <!--                        <form class="d-flex mt-3" role="search">-->
                         <!--                            <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">-->
@@ -212,7 +214,7 @@
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4"><!--вторая колонка про реки-->
                 <div class="card h-100">
-                    <div class="card-body">
+                    <div class="card-body bg-card">
                         <h5 class="card-title">Полевые силы</h5>
                         <img src="images/slides/slide2.jpg" class="card-img-top rounded"
                              alt="Медицинские и аптечные представители">
@@ -234,7 +236,7 @@
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4"><!--третья колонка про походы-->
                 <div class="card h-100">
-                    <div class="card-body">
+                    <div class="card-body bg-card">
                         <h5 class="card-title">Лидеры коммерческих команд</h5>
                         <img src="images/slides/slide3.jpg" class="card-img-top rounded"
                              alt="Лидеры коммерческих команд">
