--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Флагиан Консалтинг</title>
+    <title>Команда экспертов Флагиан Консалтинг</title>
     <!--            <link rel="icon" type="image/svg+xml" sizes="any" href="images/favicon.svg">-->
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon.png">
-    <link rel="icon" type="image/svg" sizes="any" href="images/favicon.svg">
+    <!--    <link rel="icon" type="image/svg" sizes="any" href="images/favicon.svg">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/style.css">
@@ -25,7 +25,7 @@
     <!-- шапка -->
     <header>
         <!--     OFFcanvas  навигация -->
-        <nav class="navbar navbar-dark nav_flag">
+        <nav class="navbar navbar-dark nav_flag fixed-top">
             <!--            <nav class="navbar navbar-dark bg-dark fixed-top">-->
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="images/logo_2.png"
@@ -34,80 +34,83 @@
                         data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                <div class="offcanvas offcanvas-end  offcanvasDarkNavbar2" data-bs-scroll="true" tabindex="-1"
+                     id="offcanvasDarkNavbar"
                      aria-labelledby="offcanvasDarkNavbarLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Флагман Консалтинг</h5>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                     </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <div class="offcanvas-body ">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Консалтинг</a>
-                            </li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                   aria-expanded="false">
-                                    Оценка персонала
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Какие задачи решаем</a></li>
-                                    <li><a class="dropdown-item" href="#">Оценочные инструменты</a></li>
-                                    <li><a class="dropdown-item" href="#">Целевые аудитории для оценки</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Наши Преимущества</a></li>
-                                </ul>
-
-                            </li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                   aria-expanded="false">
-                                    Тренинги
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Для Менеджеров по работе <br> с ключевыми
-                                        клиентами (KAM)</a></li>
-                                    <li><a class="dropdown-item" href="#">Для аптечных <br>и медицинских
-                                        представителей<br>Полевые силы</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Для Лидеров коммерческих команд <br>
-                                        Менеджеров
-                                        back-office</a></li>
-                                </ul>
-
-                            </li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                   aria-expanded="false">
-                                    ЭКСПЕРТЫ
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="#">Лидеры команды</a></li>
-                                    <li><a class="dropdown-item" href="#">Почему выбирают нас</a></li>
-                                    <!--                                    <li>-->
-                                    <!--                                        <hr class="dropdown-divider">-->
-                                    <!--                                    </li>-->
-                                    <!--                                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>-->
-                                </ul>
-
-                            </li>
-
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Этапы реализации проектов</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Реализованные проекты <br>Отзывы участников</a>
-                                <a class="nav-link" href="about.html">О нас</a>
+                                <a class="nav-link " href="index.html">Главная</a>
+                                <a class="nav-link active" aria-current="page" href="about.html">Команда экспертов</a>
                                 <a class="nav-link" href="contacts.html">Контакты. Обратная связь</a>
                             </li>
+
+                            <!--                            <li class="nav-item dropdown">-->
+                            <!--                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"-->
+                            <!--                                   aria-expanded="false">-->
+                            <!--                                    Оценка персонала-->
+                            <!--                                </a>-->
+                            <!--                                <ul class="dropdown-menu dropdown-menu-dark">-->
+                            <!--                                    <li><a class="dropdown-item" disabled>Какие задачи решаем</a></li>-->
+                            <!--                                    <li><a class="dropdown-item" disabled>Оценочные инструменты</a></li>-->
+                            <!--                                    <li><a class="dropdown-item" disabled>Целевые аудитории для оценки</a></li>-->
+                            <!--                                    <li>-->
+                            <!--                                        <hr class="dropdown-divider">-->
+                            <!--                                    </li>-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Наши Преимущества</a></li>-->
+                            <!--                                </ul>-->
+
+                            <!--                            </li>-->
+
+                            <!--                            <li class="nav-item dropdown">-->
+                            <!--                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"-->
+                            <!--                                   aria-expanded="false">-->
+                            <!--                                    Тренинги-->
+                            <!--                                </a>-->
+                            <!--                                <ul class="dropdown-menu dropdown-menu-dark">-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Для Менеджеров по работе <br> с ключевыми-->
+                            <!--                                        клиентами (KAM)</a></li>-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Для аптечных <br>и медицинских-->
+                            <!--                                        представителей<br>Полевые силы</a></li>-->
+                            <!--                                    <li>-->
+                            <!--                                        <hr class="dropdown-divider">-->
+                            <!--                                    </li>-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Для Лидеров коммерческих команд <br>-->
+                            <!--                                        Менеджеров-->
+                            <!--                                        back-office</a></li>-->
+                            <!--                                </ul>-->
+
+                            <!--                            </li>-->
+
+                            <!--                            <li class="nav-item dropdown">-->
+                            <!--                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"-->
+                            <!--                                   aria-expanded="false">-->
+                            <!--                                    ЭКСПЕРТЫ-->
+                            <!--                                </a>-->
+                            <!--                                <ul class="dropdown-menu dropdown-menu-dark">-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Лидеры команды</a></li>-->
+                            <!--                                    <li><a class="dropdown-item" href="#">Почему выбирают нас</a></li>-->
+                            <!--                                    &lt;!&ndash;                                    <li>&ndash;&gt;-->
+                            <!--                                    &lt;!&ndash;                                        <hr class="dropdown-divider">&ndash;&gt;-->
+                            <!--                                    &lt;!&ndash;                                    </li>&ndash;&gt;-->
+                            <!--                                    &lt;!&ndash;                                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>&ndash;&gt;-->
+                            <!--                                </ul>-->
+
+                            <!--                            </li>-->
+
+                            <!--                            <li class="nav-item">-->
+                            <!--                                <a class="nav-link" href="#">Этапы реализации проектов</a>-->
+                            <!--                            </li>-->
+                            <!--                            <li class="nav-item">-->
+                            <!--                                &lt;!&ndash;                                <a class="nav-link" href="#">Реализованные проекты <br>Отзывы участников</a>&ndash;&gt;-->
+                            <!--                                <a class="nav-link" href="about.html">Команда экспертов</a>-->
+                            <!--                                <a class="nav-link" href="contacts.html">Контакты. Обратная связь</a>-->
+                            <!--                            </li>-->
                         </ul>
                         <!--                        <form class="d-flex mt-3" role="search">-->
                         <!--                            <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">-->
@@ -122,23 +125,96 @@
     </header>
     <!-- end of шапка -->
     <!--хлебные крошки-->
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
+    <!--    <nav class="crumb" aria-label="breadcrumb">-->
+    <!--        <ol class="breadcrumb ">-->
+    <!--            <li class="breadcrumb-item active " aria-current="page" style="color: #78E100 ">Главная</li>-->
+    <!--        </ol>-->
+    <!--    </nav>-->
+    <br><br><br>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html">Главная</a></li>
+            <li class="breadcrumb-item active" aria-current="page" style="color: #78E100">Команда экспертов</a></li>
             <li class="breadcrumb-item"><a href="contacts.html">Контакты</a></li>
-            <li class="breadcrumb-item active" aria-current="page">О нас</li>
-          </ol>
-        </nav>
+            <!--            <li class="breadcrumb-item active" aria-current="page">О нас</li>-->
+        </ol>
+    </nav>
     <!--хлебные крошки-->
+
+    <!--контент-->
+    <div class="row "><!--помещаем в блок для 2-х колонок-->
+        <h1 class="text-center pb-2" title="Команда экспертов Флагман Консалтинг">Команда экспертов</h1>
+        <!--Дмитрий Обидин-->
+        <div class="col-sm-6 mb-3 mb-sm-0">
+
+            <div class="card h=100">
+                <div class="card-body  bg-card">
+                    <h2 class="card-title">Дмитрий Обидин</h2>
+                    <img src="images/expert_obid.jpg" class="card-img-top rounded"
+                         alt="Менеджеры по работе с ключевыми клиентами">
+                    <p class="card-text">Профессионал в области Training & Development,
+                        <b>бизнес-тренер с 15-летним опытом проведения тренингов </b><br>
+                        Опыт работы в лидирующих международных компаниях – GlaxoSmithKline/Haleon (одна из крупнейших
+                        фармацевтических компаний в мире), Балтика/Carlsberg (лидер в секторе FMCG), British American
+                        Tobacco (одна из крупнейших табачных компаний в мире). <br>
+                        Опыт управления бизнесом более 7 лет, в том числе опыт управления командой более 200
+                        сотрудников.<br>
+                        <b>Области экспертизы:</b>
+                    <ul>
+                        <li>Построение эффективной системы обучения</li>
+                        <li>Обучение лидеров</li>
+                        <li>Key Account Management</li>
+                        <li>Обучение полевой команды</li>
+                        <li> Деловые игры</li>
+                        <li>Soft Skills</li>
+                        <li>Комплексная оценка персонала</li>
+
+                    </ul>
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-sm-6">
+            <div class="card h=100">
+                <div class="card-body  bg-card">
+                    <h2 class="card-title">Анна Григорьева</h2>
+                    <img src="images/expert_grig.jpg" class="card-img-top rounded"
+                         alt="Менеджеры по работе с ключевыми клиентами">
+                    <p class="card-text">Профессионал в области Training & Development,
+                        <b>бизнес-тренер с 15-летним опытом проведения тренингов </b><br>
+                        Успешный опыт развития коммерческого персонала в лидирующих фармацевтических компаниях –Novartis
+                        Consumer Health, GlaxoSmithKline / Haleon <br>
+                        Опыт лидирования инновационных проектов в области развития ключевых клиентов<br><br>
+                        <b>Области экспертизы:</b>
+                    <ul>
+                        <li>Построение эффективной системы обучения</li>
+                        <li>Комплексная оценка персонала</li>
+                        <li>Обучение лидеров</li>
+                        <li>Net Revenue Management</li>
+                        <li>Key Account Management</li>
+                        <li>Бизнес симуляции</li>
+                        <!--                        <li> Деловые игры</li>-->
+                        <li>Soft Skills</li>
+                        <!--                        <li>Комплексная оценка персонала</li>-->
+
+                    </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--контент end-->
 
 
 </div>
 <!--подвал-->
 <br>
 <footer class="nav_flag text-center text-lg-start">
-<!--<footer class="bg-body-tertiary text-center text-lg-start">-->
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(255, 255, 255, 0.05);">
+    <div class="text-center p-3" style="color: #F8FAA7">
         © 2024 Флагиан Консалтинг
     </div>
     <!-- Copyright -->
